--- a/backend/src/ReactLabb.Server/appsettings.json
+++ b/backend/src/ReactLabb.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ScrapContext": "Server=(localdb)\\mssqllocaldb;Database=ScrapContext;Trusted_Connection=True;"
+  }
 }
