--- a/backend/src/ReactLabb.Server/appsettings.json
+++ b/backend/src/ReactLabb.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ScrapContext": "Server=(localdb)\\mssqllocaldb;Database=ScrapContext;Trusted_Connection=True;"
+    "ScrapContext": "Server=(localdb)\\mssqllocaldb;Database=scrap.db;Trusted_Connection=True;"
   }
 }
