--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,5 +26,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
-  "proxy": "http://localhost:5100"
+  "proxy": "https://vfq3vv70-5100.euw.devtunnels.ms/"
 }
